--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,125 @@
-.App {
-  text-align: center;
+.wrapper {
+  background-color: #000;
+  width: 100vw;
+  height: 100%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navigation {
+  z-index: 99999999;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav-item {
+  color: #fff;
+  text-decoration: none;
+  margin-right: 20px;
+  cursor: pointer;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav-item:hover {
+  color: #f00;
+}
+.banner {
+  height: 600px;
+  color: #fff;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+}
+.banner::before {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 600px;
+  content: "";
+  background: linear-gradient(to right, black, transparent);
+}
+.banner-info {
+  width: 40%;
+  margin-left: 30px;
+  z-index: 1;
+}
+.slide {
+  color: #fff;
+}
+.loader {
+  margin-left: 50%;
+  margin-top: 50%;
+}
+.card {
+  width: 350px;
+  height: 200px !important;
+  border-radius: 5px;
+  overflow: hidden;
+}
+.card h1,
+span {
+  color: #fff;
+}
+.card h1 {
+  font-size: 24px;
+}
+.overlay {
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+}
+.card:hover .overlay {
+  opacity: 1;
+  padding: 10px;
+  background-color: rgba(43, 41, 41, 0.9);
+  transition: 0.2s;
+}
+.MovieDetail {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  color: #fff;
 }
-
-.App-link {
-  color: #61dafb;
+.MovieDetail_wrap {
+  position: relative;
+  width: 1920px;
+  border-radius: 5px;
+  padding: 20px;
+  display: flex;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.movie_img {
+  opacity: 0.5;
+}
+.movie_content {
+  position: absolute;
+  top: 200px;
+  left: 150px;
+  width: 800px;
+}
+.movie_title {
+  font-size: 32px;
+  font-weight: bold;
+}
+.movie_overview {
+  font-weight: 500;
+  line-height: 20px;
+  margin: 10px 0;
+}
+.playbtn {
+  margin-right: 10px;
+}
+.close {
+  color: #fff;
+  font-size: 50px;
+  cursor: pointer;
+}
+.close:hover {
+  background-color: #fff;
+  color: #000;
+  padding: 0 25px;
+  border-radius: 50px;
+  opacity: 0.5;
+}
+.badge {
+  margin-right: 10px;
 }
