--- a/src/App.css
+++ b/src/App.css
@@ -34,8 +34,15 @@
   margin-left: 30px;
   z-index: 1;
 }
+.banner-info h1 {
+  font-size: px;
+}
 .slide {
   color: #fff;
+}
+.slide_title {
+  font-size: 24px;
+  margin-top: 30px;
 }
 .loader {
   margin-left: 50%;
@@ -62,64 +69,125 @@ span {
 .card:hover .overlay {
   opacity: 1;
   padding: 10px;
-  background-color: rgba(43, 41, 41, 0.9);
+  background-color: rgba(43, 41, 41, 0.8);
   transition: 0.2s;
 }
 .MovieDetail {
   position: fixed;
-  top: 0;
+  top: 30px;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 9999;
   display: flex;
   flex-direction: column;
   color: #fff;
 }
+.MovieDetail::before {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: "";
+  background: rgba(0, 0, 0, 0.8);
+}
+.close {
+  position: absolute;
+  top: 55px;
+  right: 35px;
+  color: #fff;
+  font-size: 35px;
+  cursor: pointer;
+  z-index: 9999;
+  transition: 0.5s;
+}
+
 .MovieDetail_wrap {
   position: relative;
-  width: 1920px;
+  width: 85%;
   border-radius: 5px;
-  padding: 20px;
   display: flex;
+  flex-direction: column;
 }
-.movie_img {
-  opacity: 0.5;
+.movie_img img {
+  width: 100%;
+}
+.movie_img::before {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: "";
+  background: linear-gradient(to top, black 30%, transparent);
 }
 .movie_content {
-  position: absolute;
-  top: 200px;
-  left: 150px;
-  width: 800px;
+  width: 100%;
+  z-index: 9999;
+  padding: 40px;
 }
 .movie_title {
-  font-size: 32px;
+  font-size: 40px;
   font-weight: bold;
+}
+.origin {
+  font-size: 24px;
+  margin-left: 10px;
+  font-weight: normal;
 }
 .movie_overview {
   font-weight: 500;
-  line-height: 20px;
+  line-height: 25px;
   margin: 10px 0;
+}
+.buttons {
+  display: flex;
+  align-items: center;
 }
 .playbtn {
   margin-right: 10px;
 }
-.close {
-  color: #fff;
-  font-size: 50px;
-  cursor: pointer;
+.icons {
+  width: 70px;
+  height: 70px;
+  align-items: center;
 }
-.close:hover {
-  background-color: #fff;
-  color: #000;
-  padding: 0 25px;
-  border-radius: 50px;
-  opacity: 0.5;
+.movie_like {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.movie_pick {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  font-size: 30px;
+}
+.movie_pick span {
+  font-size: 10px;
+  text-align: center;
+}
+.heart-icon {
+  font-size: 32px;
+  color: #fff; /* 기본 색상 */
+  transition: color 0.3s ease-in-out;
+}
+
+.heart-icon.liked {
+  color: #ff0000; /* 클릭 시 변경될 색상 */
 }
 .badge {
   margin-right: 10px;
+}
+.movie_detail_content {
+  z-index: 9999;
+  color: #fff;
+  padding: 40px;
+}
+.movie_release_date {
+  color: #fff;
 }
